@@ -27,22 +27,10 @@
 #include <kconfig.h>
 
 KMProxyDialog::KMProxyDialog(QWidget *parent, const char *name)
-: KDialog(parent,name,true)
+: KDialogBase(parent, name, true, QString::null, Ok|Cancel, Ok, true)
 {
 	m_widget = new KMProxyWidget(this);
-	QPushButton	*m_ok = new QPushButton(i18n("OK"), this);
-	QPushButton	*m_cancel = new QPushButton(i18n("Cancel"), this);
-	m_ok->setDefault(true);
-	connect(m_ok,SIGNAL(clicked()),SLOT(accept()));
-	connect(m_cancel,SIGNAL(clicked()),SLOT(reject()));
-
-	QVBoxLayout	*lay0 = new QVBoxLayout(this, 10, 10);
-	QHBoxLayout	*lay1 = new QHBoxLayout(0, 0, 10);
-	lay0->addWidget(m_widget,1);
-	lay0->addLayout(lay1,0);
-	lay1->addStretch(1);
-	lay1->addWidget(m_ok);
-	lay1->addWidget(m_cancel);
+	setMainWidget(m_widget);
 
 	resize(300,100);
 	setCaption(i18n("RLPR Settings"));
